--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "rollup-plugin-terser": "^7.0.0",
     "sass": "^1.57.1",
     "svelte": "^3.0.0",
-    "svelte-preprocess": "^5.0.0"
+    "svelte-preprocess": "^5.0.1"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "vite": "^4.0.4"
   }
 }
