--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "svelte-preprocess": "^5.0.1"
   },
   "dependencies": {
+    "materialize-css": "^1.0.0-rc.2",
     "sirv-cli": "^2.0.0",
     "vite": "^4.0.4"
   }
