Se recuperan opiniones de base de datos online (1ra version)

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "svelte-preprocess": "^5.0.1"
   },
   "dependencies": {
+    "airtable": "^0.11.6",
+    "axios": "^1.3.2",
     "materialize-css": "^1.0.0-rc.2",
+    "seatable-api": "^1.0.31",
     "sirv-cli": "^2.0.0",
     "vite": "^4.0.4"
   }
